2000-12-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): Support specifying
 	composition rule.

2000-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (draw): Bugfix - the primitive string was not
 	properly null terminated. It is a wonder that the code usually
 	worked at all.  Thanks to afatela@marktest.pt for reporting it.

2000-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (deconstructImages): New STL function for
 	deconstructing an image list to assist with creating an animation.
	(mosaicImages): New STL function for inlaying an image list to
 	form a single coherent picture.

2000-12-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (convolve): New method to convolve image using
 	user-supplied convolution matrix.
	(unsharpmask): New method to replace image with a sharpened
 	version of the original image using the unsharp mask algorithm.

2000-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* : Adapted to ImageMagick API change which eliminates AnnotateInfo.

2000-12-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (annotateImage): Brought into sync with
 	annotate methods in Image.

2000-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (annotate): Usage of Geometry parameter was
 	incorrect. Geometry parameter is used to specify bounding area.
  	This changes the interpretation for two of the annotate methods
 	(which probably weren't usable before).

2000-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Color.h (alphaQuantum): Bugfix.  Due to change in
 	treatment of opacity member, alphaQuantum() was not allowing value
 	to be set.

2000-11-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableFillRule): New class to specify fill
 	rule (see SVG's fill-rule).