@@ -552,7 +552,7 @@ class DrawableCompositeImage : public DrawableBase
 public:
   DrawableCompositeImage ( double x_, double y_,
                            const std::string &image_ )
-    : _composition(ModulateCompositeOp), // FIXME: correct enum?
+    : _composition(CopyCompositeOp),
       _x(x_),
       _y(y_),
       _width(0),
@@ -563,7 +563,7 @@ public:
   DrawableCompositeImage ( double x_, double y_,
                            double width_, double height_,
                            const std::string &image_ )
-    : _composition(ModulateCompositeOp), // FIXME: correct enum?
+    : _composition(CopyCompositeOp),
       _x(x_),
       _y(y_),
       _width(width_),
@@ -806,7 +806,7 @@ private:
   Color _color;
 };
 
-// Specify fill rule (fill-rule) FIXME
+// Specify fill rule (fill-rule)
 class DrawableFillRule : public DrawableBase
 {
 public:
