@@ -1,3 +1,7 @@
+2001-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp : Adjusted to ImageMagick animation parameter API change.
+
 2000-12-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Drawable.cpp (DrawableCompositeImage): Support specifying
